--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -48,9 +48,9 @@ jobs:
           kernel: linux61
           code-name: "ShefOS"
           release-tag: ${{ needs.prepare-release.outputs.release_tag }}
-      -
-        name: rollback
-        if: ${{ failure() || cancelled() }}
-        run: |
-          echo ${{ github.token }} | gh auth login --with-token
-          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+#      -
+#        name: rollback
+#        if: ${{ failure() || cancelled() }}
+#        run: |
+#          echo ${{ github.token }} | gh auth login --with-token
+#          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
