--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -13,9 +13,9 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.0
 #        with:
 #          access_token: ${{ github.token }}
-      -
       
-      permissions:
+      
+      - permissions:
       contents: write
       
       - 
