--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -8,8 +8,7 @@ jobs:
   prepare-release:
     runs-on: ubuntu-20.04
     timeout-minutes: 240
-    steps:
-      - 
+   - steps:
         uses: styfle/cancel-workflow-action@0.9.0
 #        with:
 #          access_token: ${{ github.token }}
@@ -34,17 +33,16 @@ jobs:
         BRANCH: [stable]
         SCOPE: [minimal]
     steps:
-      - 
-        uses: styfle/cancel-workflow-action@0.9.0
+       - uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      - 
-        id: time
+    
+      -  id: time
         uses: nanzm/get-time-action@v1.1
         with:
           format: 'YY.MM'   
-      -
-        name: image-build-upload
+      
+      -  name: image-build-upload
         uses: manjaro/manjaro-iso-action@main
         with:
           repository: linuxshef/shefos-build
