--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,22 +1,17 @@
-name: shefos_build
+name: iso_build
 on:
   workflow_dispatch:
-  schedule:
-     - cron: "0 */4 * * *"
+  # schedule:
+  #  - cron:  '30 2 * * *'
 
-- jobs:
+jobs:
   prepare-release:
     runs-on: ubuntu-20.04
-    timeout-minutes: 240
-   - steps:
+    steps:
+      - 
         uses: styfle/cancel-workflow-action@0.9.0
-#        with:
-#          access_token: ${{ github.token }}
-      
-      
-      - permissions:
-      contents: write
-      
+        with:
+          access_token: ${{ github.token }}
       - 
         id: time
         uses: nanzm/get-time-action@v1.1
@@ -31,28 +26,31 @@ on:
       matrix:
         EDITION: [xfce]
         BRANCH: [stable]
-        SCOPE: [minimal]
+        SCOPE: [minimal,full]
     steps:
-       - uses: styfle/cancel-workflow-action@0.9.0
+      - 
+        uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-    
-      -  id: time
+      - 
+        id: time
         uses: nanzm/get-time-action@v1.1
         with:
           format: 'YY.MM'   
-      
-      -  name: image-build-upload
+      -
+        name: image-build-upload
         uses: manjaro/manjaro-iso-action@main
         with:
-          repository: linuxshef/shefos-build
-          path: shefos-build
-          kernel: linux61
-          code-name: "ShefOS"
-#      release-tag: ${{ needs.prepare-release.outputs.release_tag }}
-#      -
-#        name: rollback
-#        if: ${{ failure() || cancelled() }}
-#        run: |
-#          echo ${{ github.token }} | gh auth login --with-token
-#          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+          edition: ${{ matrix.edition }}
+          branch: ${{ matrix.branch }}
+          scope: ${{ matrix.scope }}
+          version: ${{ steps.time.outputs.time }}
+          kernel: linux515
+          code-name: "Custom-Build"
+          release-tag: ${{ needs.prepare-release.outputs.release_tag }}
+      -
+        name: rollback
+        if: ${{ failure() || cancelled() }}
+        run: |
+          echo ${{ github.token }} | gh auth login --with-token
+          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
