--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -38,19 +38,19 @@ jobs:
         with:
           format: 'YY.MM'   
       -
-        name: image-build-upload
-        uses: manjaro/manjaro-iso-action@main
+        name: ShefOS
+        uses: linuxshef/shefos-build
         with:
-          edition: ${{ matrix.edition }}
-          branch: ${{ matrix.branch }}
-          scope: ${{ matrix.scope }}
-          version: ${{ steps.time.outputs.time }}
-          kernel: linux515
-          code-name: "Custom-Build"
-          release-tag: ${{ needs.prepare-release.outputs.release_tag }}
-      -
-        name: rollback
-        if: ${{ failure() || cancelled() }}
-        run: |
-          echo ${{ github.token }} | gh auth login --with-token
-          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+#          edition: ${{ matrix.edition }}
+#          branch: ${{ matrix.branch }}
+#          scope: ${{ matrix.scope }}
+#          version: ${{ steps.time.outputs.time }}
+          kernel: linux61
+          code-name: "ShefOS"
+#          release-tag: ${{ needs.prepare-release.outputs.release_tag }}
+#      -
+#        name: rollback
+#        if: ${{ failure() || cancelled() }}
+#        run: |
+#          echo ${{ github.token }} | gh auth login --with-token
+#          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
