--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,9 +1,10 @@
 name: ShefOS
 on:
-  workflow_dispatch:
+
    schedule:
     - cron:  "0 */4 * * *"
    workflow_dispatch:
+   
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,10 +42,7 @@ jobs:
         BRANCH: [stable]
         SCOPE: [minimal]
     steps:
-      - 
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          access_token: ${{ github.token }}
+      -  uses: actions/checkout@v3
       - 
         id: time
         uses: nanzm/get-time-action@v1.1
