--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 240
 
-    permissions:
-      contents: write
+ #  permissions:
+ #     contents: write
 
     container:
       image: manjaro:latest
