--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,22 +1,21 @@
 name: ShefOS
-on:
 
-   schedule:
-    - cron:  "0 */4 * * *"
-   workflow_dispatch:
-   
+on:
+  schedule:
+    - cron: "0 */4 * * *"
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 240
 
+    permissions:
+      contents: write
+
     container:
-      image: manjaro:latest
+      image: archlinux:latest
       options: --privileged
-      
-  prepare-release:
-    runs-on: ubuntu-latest
-    timeout-minutes: 240
 
     steps:
       - 
@@ -30,16 +29,15 @@ jobs:
           format: 'YYYYMMDDHHmm'
     outputs:
       release_tag: ${{ steps.time.outputs.time }}
-  build-release:
-    runs-on: ubuntu-20.04
-    needs: [prepare-release]
     strategy:
       matrix:
         EDITION: [xfce]
         BRANCH: [stable]
-        SCOPE: [minimal]
-    steps:
-      -  uses: actions/checkout@v3
+        SCOPE: [minimal,full]
+        
+        uses: styfle/cancel-workflow-action@0.9.0
+        with:
+          access_token: ${{ github.token }}
       - 
         id: time
         uses: nanzm/get-time-action@v1.1
@@ -49,16 +47,14 @@ jobs:
         name: image-build-upload
         uses: manjaro/manjaro-iso-action@main
         with:
-#        edition: ${{ matrix.edition }}
-#        branch: ${{ matrix.branch }}
-#        scope: ${{ matrix.scope }}
-#        version: ${{ steps.time.outputs.time }}
-          kernel: linux61
-          code-name: "ShefOS"
-#         release-tag: ${{ needs.prepare-release.outputs.release_tag }}
-#      -
-#        name: rollback
-#        if: ${{ failure() || cancelled() }}
-#        run: |
-#          echo ${{ github.token }} | gh auth login --with-token
-#          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+          edition: ${{ matrix.edition }}
+          branch: ${{ matrix.branch }}
+          scope: ${{ matrix.scope }}
+          version: ${{ steps.time.outputs.time }}
+          kernel: linux515
+          code-name: "Custom-Build"
+          release-tag: ${{ needs.prepare-release.outputs.release_tag }}
+      -
+
+
+
