--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,48 +1,44 @@
-name: ShefOS
+name: kde_iso_build
 
 on:
-  schedule:
-    - cron: "0 */4 * * *"
-  workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 240
-
-    permissions:
-      contents: write
-
-    container:
-      image: archlinux:latest
-      options: --privileged
-
+  prepare-release:
+    runs-on: ubuntu-20.04
     steps:
-      - 
-        uses: styfle/cancel-workflow-action@0.9.0
+      -
+        uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{ github.token }}
-      - 
+      -
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
-          format: 'YYYYMMDDHHmm'
+          format: 'YYYYMMDD'
     outputs:
       release_tag: ${{ steps.time.outputs.time }}
+  build-release:
+    runs-on: ubuntu-20.04
+    needs: [prepare-release]
     strategy:
       matrix:
-        EDITION: [xfce]
-        BRANCH: [stable]
-        SCOPE: [minimal,full]
-        
-        uses: styfle/cancel-workflow-action@0.9.0
+        EDITION: [kde]
+        BRANCH: [testing]
+        SCOPE: [minimal]
+    steps:
+      -
+        uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{ github.token }}
-      - 
+      -
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
-          format: 'YY.MM'   
+          format: 'YYYYMMDD'
       -
         name: image-build-upload
         uses: manjaro/manjaro-iso-action@main
@@ -50,11 +46,13 @@ jobs:
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
           scope: ${{ matrix.scope }}
-          version: ${{ steps.time.outputs.time }}
-          kernel: linux515
-          code-name: "Custom-Build"
+          version: ${{ steps.time.outputs.time }}-development
+          kernel: linux519
+          code-name: "Testing-Build"
           release-tag: ${{ needs.prepare-release.outputs.release_tag }}
       -
-
-
-
+        name: rollback
+        if: ${{ failure() || cancelled() }}
+        run: |
+          echo ${{ github.token }} | gh auth login --with-token
+          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
