--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -55,5 +55,5 @@ jobs:
         name: rollback
         if: ${{ failure() || cancelled() }}
         run: |
-          echo ${{ github.token }} | gh auth login --with-token
+          echo ${{ github.token }} | gh auth login #--with-token
           gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
