--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,4 +1,4 @@
-name: iso_build
+name: ShefOS
 on:
   workflow_dispatch:
   # remove if you don't want to build on a schedule
@@ -26,14 +26,14 @@ jobs:
       # generate a common tag to be used in all elements of the matrix strategy
       release_tag: ${{ steps.time.outputs.time }}      
   release:
-    runs-on: ubuntu-20.04
+    runs-on: last-release
     needs: prepare-release    
     strategy:
       matrix:
         ##### EDIT ME #####      
-        EDITION: [cinnamon, gnome]
-        BRANCH: [stable, testing]
-        SCOPE: [minimal,full]
+        EDITION: [xfce]
+        BRANCH: [stable]
+        SCOPE: [minimal]
         ###################
     steps:
       # cancel already running instances of the same action on the currently working on branch
@@ -46,16 +46,26 @@ jobs:
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
           scope: ${{ matrix.scope }}
-          version: "21.0"
-          kernel: linux510
-          code-name: "Ornara"
+          version: "3.5"
+          kernel: linux61
+          code-name: "MyIso"
           # providing a release-tag allows for github releases
-          release-tag: ${{ needs.prepare-release.outputs.release_tag }}
-      # delete the github release in case of cancellation or failure
-      # refer to .github/workflows/cleanup-test-release.yml for rollback strategies concerning the other distribution channels
-      - name: rollback github release
-        if: ${{ failure() || cancelled() }}
-        run: |
-          echo ${{ github.token }} | gh auth login --with-token
-          gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
-          git push --delete origin ${{ needs.prepare-release.outputs.release_tag }}
+- id: image-build
+  uses: manjaro/manjaro-iso-action@main
+  with:
+    ...
+    gpg-secret-key-base64: ${{ secrets.gpg_secret_base64 }}
+    gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+       
+
+  - id: image-build
+  uses: manjaro/manjaro-iso-action@main
+  with:
+    ...
+    release-tag: ${{ needs.prepare-release.outputs.release_tag }}
+- name: rollback github release
+  if: ${{ failure() || cancelled() }}
+  run: |
+    echo ${{ github.token }} | gh auth login --with-token
+    gh release delete ${{ needs.prepare-release.outputs.release_tag }} -y --repo ${{ github.repository }}
+    git push --delete origin ${{ needs.prepare-release.outputs.release_tag }}
