--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,4 +1,4 @@
-name: iso_build
+name:ShefOS
 on:
   workflow_dispatch:
   # remove if you don't want to build on a schedule
@@ -12,7 +12,7 @@ on:
 
 jobs:
   prepare-release:
-    runs-on: ubuntu-20.04
+    runs-on: last-release
     steps:
       # cancel already running instances of the same action on the currently working on branch
       - uses: styfle/cancel-workflow-action@0.9.0
@@ -26,7 +26,7 @@ jobs:
       # generate a common tag to be used in all elements of the matrix strategy
       release_tag: ${{ steps.time.outputs.time }}      
   release:
-    runs-on: ubuntu-20.04
+    runs-on: last-release
     needs: prepare-release    
     strategy:
       matrix:
