--- a/.github/workflows/shefos_build.yml
+++ b/.github/workflows/shefos_build.yml
@@ -1,4 +1,4 @@
-name:ShefOS
+name: iso_build
 on:
   workflow_dispatch:
   # remove if you don't want to build on a schedule
@@ -12,7 +12,7 @@ on:
 
 jobs:
   prepare-release:
-    runs-on: last-release
+    runs-on: ubuntu-20.04
     steps:
       # cancel already running instances of the same action on the currently working on branch
       - uses: styfle/cancel-workflow-action@0.9.0
@@ -26,14 +26,14 @@ jobs:
       # generate a common tag to be used in all elements of the matrix strategy
       release_tag: ${{ steps.time.outputs.time }}      
   release:
-    runs-on: last-release
+    runs-on: ubuntu-20.04
     needs: prepare-release    
     strategy:
       matrix:
         ##### EDIT ME #####      
-        EDITION: [xfce]
-        BRANCH: [stable]
-        SCOPE: [minimal]
+        EDITION: [cinnamon, gnome]
+        BRANCH: [stable, testing]
+        SCOPE: [minimal,full]
         ###################
     steps:
       # cancel already running instances of the same action on the currently working on branch
@@ -46,9 +46,9 @@ jobs:
           edition: ${{ matrix.edition }}
           branch: ${{ matrix.branch }}
           scope: ${{ matrix.scope }}
-        #  version: "21.0"
-          kernel: linux61
-        #  code-name: "Ornara"
+          version: "21.0"
+          kernel: linux510
+          code-name: "Ornara"
           # providing a release-tag allows for github releases
           release-tag: ${{ needs.prepare-release.outputs.release_tag }}
       # delete the github release in case of cancellation or failure
